<resources>
    <string name="app_name">Nutrieasy</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="google_signin">Continue with Google</string>
    <string name="logout">Logout</string>
    <string name="profile">Profile</string>
    <string name="scan">Scan</string>
    <string name="capture_image">Capture Image</string>
    <string name="switch_camera">Switch Camera</string>
    <string name="select_from_gallery">Select from Gallery</string>
    <string name="cancel">Cancel</string>
    <string name="camera_failed">Camera failed to take a picture</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="create_your_account">Create Your Account</string>
    <string name="create_account">Sign Up</string>
    <string name="registered">Already have an account?</string>
    <string name="sign_in">Sign In</string>
    <string name="unregistered">Don\'t have an account?</string>
    <string name="or">or</string>
    <string name="todo_fruit_picture">TODO Fruit PICTURE</string>
    <string name="scanning">Scanning...</string>
    <string name="_25">25</string>
    <string name="nutrieasy">Nutrieasy</string>
    <string name="track_your_nutrition_easier_with_nutrieasy">Track your nutrition easier \nwith Nutrieasy</string>
    <string name="birth_of_date">Date of Birth</string>
    <string name="weight">Weight (kg)</string>
    <string name="height">Height (cm)</string>
    <string name="gender">Gender</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="save_profile">Save Profile</string>
    <string name="display_name">Display Name</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="todo">To do</string>
    <string name="track">Track</string>
    <string name="tracked">Tracked</string>
    <string name="retry">Retry</string>
    <string name="kcal">%1$d Kcal</string>
    <string name="gram">%1$d Gram</string>
    <string name="hello">Hello, %1$s</string>
    <string name="let_s_start_living_healthy_from_now_on">Let\'s start living healthy from now on</string>
    <string name="calorie_item">%1$d kcal</string>
    <string name="size_item">%1$d G</string>
    <string name="protein">Protein</string>
    <string name="fiber">Fiber</string>
    <string name="calorie">Calorie</string>
    <string name="fat">Fat</string>
    <string name="history">Scan History</string>
    <string name="all_history">All History</string>
    <string name="oops_your_meals_history_is_empty_scan_now">Oops!, Your meals history is empty, Scan now</string>
    <string name="empty_history">History is empty</string>
    <string name="qty">%1$d Qty</string>
    <string name="activity">Activity</string>
    <string name="sugar">Sugar</string>
    <string name="unknown">Unknown</string>
</resources>